tests/transpiler/x/scala/json_builtin.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/json_builtin.scala:6: error: not found: value json
    json(m)
    ^
one error found
