tests/transpiler/x/scala/json_builtin.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:41:39 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    val m: Map[String,Int] = Map("a" -> 1, "b" -> 2)
    json(m)
  }
}
